Fix large validation error messages height and overflow (#188)
* Fix large validation error messages height and overflow

--- a/src/app/validation/error-message/error-message.component.scss
+++ b/src/app/validation/error-message/error-message.component.scss
@@ -7,6 +7,7 @@ div.invalid {
   color: $error-color;
   font-size: $error-font-size;
   opacity: $error-opacity;
+  overflow-wrap: break-word;
 }
 
 input:not([type="checkbox"]) + label + :host,
@@ -14,7 +15,7 @@ mz-select-container :host,
 textarea + label + :host {
 
   div.invalid {
-    height: $error-height;
     margin-top: (-$error-height);
+    min-height: $error-height
   }
 }
